--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,11 @@
     <script type="module" src="./index.js"></script>
   </head>
   <body>
-    
+    <form class="search-form" id="search-form">
+      <input type="text" class="search-form__input" name="searchQuery" autocomplete="off" placeholder="Search images..." />
+      <button class="search-form__button" type="submit">Search</button>
+    </form>
+    <div class="img-container"></div>
     <!-- <include src="./partials/example.html"></include> -->
   </body>
 </html>
