--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
       <button class="search-form__button" type="submit">Search</button>
     </form>
     <div class="img-container"></div>
+    <button type="button" class="load-more">Load more</button>
     <!-- <include src="./partials/example.html"></include> -->
   </body>
 </html>
