--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Page title</title>
+    <title>Search</title>
     <link rel="stylesheet" href="./sass/index.scss" />
     <script type="module" src="./index.js"></script>
   </head>
@@ -12,8 +12,13 @@
       <input type="text" class="search-form__input" name="searchQuery" autocomplete="off" placeholder="Search images..." />
       <button class="search-form__button" type="submit">Search</button>
     </form>
-    <div class="img-container"></div>
-    <button type="button" class="load-more">Load more</button>
+    <div class="imgs-container"></div>
+    <div class="load-more-btn-container">
+      <button type="button" class="load-more">
+        Load more
+      </button>
+    </div>
+    
     <!-- <include src="./partials/example.html"></include> -->
   </body>
 </html>
