--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
     </form>
     <div class="imgs-container"></div>
     <div class="load-more-btn-container">
-      <button type="button" class="load-more">
+      <button type="button" class="load-more" hidden>
         Load more
       </button>
     </div>
